--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@
 .header {
   max-width: 1200px;
   margin: 15px auto;
+  position: relative;
 }
 
 .header ul li {
@@ -30,6 +31,12 @@
   padding-right: 20px;
   font-weight: 700;
   font-size: 15px;
+  margin-bottom: 20px;
+}
+
+.header__hamburger-container {
+  display: flex;
+  flex-direction: column;
 }
 
 .header__hamburger {
@@ -79,7 +86,8 @@
 }
 
 .header__menu {
-  display: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .menu-btn:checked ~ .menu-icon .navicon {
@@ -117,13 +125,16 @@
   .header .header__menu {
     display: block;
   }
+  .header .header__menu li {
+    margin: 0;
+  }
 
   .menu-icon,
 .header__hamburger {
     display: none;
   }
 
-  .header__container {
+  .header__menu-container {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
